--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.0.7",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
