--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-image-gallery": "^1.0.7",
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
