--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Royce-enclave.github.io/Profile/",
+  "homepage": "http://royce-enclave.github.io/Profile/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
