--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://royce-enclave.github.io/Profile/",
+  "homepage": "http://royce-enclave.github.io/Profile",
   "name": "profile",
   "version": "0.1.0",
   "private": true,
