--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
