--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://royce.github.io/",
+  "homepage": "http://lenguyensongtoan.github.io/profile/",
   "name": "profile",
   "version": "0.1.1",
   "private": true,
